fix(material-experimental/theming): align form field icons with M3 (#28463)
Emits a bunch of tokens related to the form field which allows us to align the appearance with M3.

(cherry picked from commit 3ccee77d14e2808791240123f312609a7c7647d0)

--- a/src/material/core/tokens/m2/mdc/_filled-text-field.scss
+++ b/src/material/core/tokens/m2/mdc/_filled-text-field.scss
@@ -34,8 +34,6 @@ $prefix: (mdc, filled-text-field);
     label-text-populated-size: null,
     label-text-type: null,
     disabled-label-text-opacity: null,
-    hover-label-text-color: null,
-    error-hover-label-text-color: null,
     supporting-text-color: null,
     supporting-text-font: null,
     supporting-text-line-height: null,
@@ -50,7 +48,11 @@ $prefix: (mdc, filled-text-field);
     focus-supporting-text-color: null,
     hover-supporting-text-color: null,
     input-text-prefix-color: null,
+    input-text-suffix-color: null,
     container-height: null,
+    trailing-icon-size: null,
+    leading-icon-size: null,
+    trailing-icon-color: null,
     disabled-trailing-icon-color: null,
     disabled-trailing-icon-opacity: null,
     error-focus-trailing-icon-color: null,
@@ -58,19 +60,15 @@ $prefix: (mdc, filled-text-field);
     error-trailing-icon-color: null,
     focus-trailing-icon-color: null,
     hover-trailing-icon-color: null,
-    trailing-icon-color: null,
-    trailing-icon-size: null,
-    disabled-leading-icon-color: null,
+    leading-icon-color: null,
     disabled-leading-icon-opacity: null,
+    disabled-leading-icon-color: null,
     error-focus-leading-icon-color: null,
     error-hover-leading-icon-color: null,
     error-leading-icon-color: null,
     focus-leading-icon-color: null,
     hover-leading-icon-color: null,
-    leading-icon-color: null,
-    leading-icon-size: null,
     input-text-type: null,
-    input-text-suffix-color: null,
     input-text-font: null,
     input-text-line-height: null,
     input-text-size: null,
@@ -104,12 +102,14 @@ $prefix: (mdc, filled-text-field);
     disabled-container-color: _variable-safe-mix($on-surface, $surface, 2%),
 
     label-text-color: rgba($on-surface, 0.6),
+    hover-label-text-color: rgba($on-surface, 0.6),
     disabled-label-text-color: rgba($on-surface, 0.38),
 
     input-text-color: rgba($on-surface, 0.87),
     disabled-input-text-color: rgba($on-surface, 0.38),
     input-text-placeholder-color: rgba($on-surface, 0.6),
 
+    error-hover-label-text-color: $warn-color,
     error-focus-label-text-color: $warn-color,
     error-label-text-color: $warn-color,
     error-caret-color: $warn-color,
